save button, UI changes

--- a/saved.html
+++ b/saved.html
@@ -16,8 +16,8 @@
         <!-- Inter -->
         <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     </head>
-    <body style="width: 600px;">
-        <h1>Saved pages</h1>
+    <body>
+        <h2>Saved pages</h2>
         
         <button id="clearSaved">Clear saved tabs</button>
         <button id="returnToPopup"><a href="popup.html">Return to tabs</a></button>
