--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h2>tabular beta</h2>
+        <h2>TABULAR</h2>
         
         <button id="savePage">Save Page</button>
         <button id="saveWindow">Save Window</button>
